--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/azure-angular-app",
+            "outputPath": "dist/azure-angular-app/browser",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
